add miniapp code

--- a/src/pages/example-detail/index.scss
+++ b/src/pages/example-detail/index.scss
@@ -99,6 +99,9 @@
       align-items: center;
       background: transparent;
     }
+    .btn-share::after {
+      border: none;
+    }
   }
 
   /* chroma style */
