--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -4,3 +4,14 @@ $color-brand-light: #7abfde;
 $color-brand-dark: #3e87a9;
 
 $at-switch-title-size: 1rem;
+$at-divider-font-size: .6rem;
+
+// customize button
+$at-button-bg: $color-brand;
+$at-button-border-color-primary: $color-brand;
+
+$color-border-light: $color-brand-light;
+$color-text-base-inverse: white;
+
+$float-layout-height-min: 80%;
+$float-layout-height-max: 80%;
