--- a/src/pages/about/index.scss
+++ b/src/pages/about/index.scss
@@ -15,7 +15,7 @@
 
   .link {
     font-weight: 900;
-    font-size: 25rpx;
+    font-size: 1rem;
     text-decoration: underline;
     text-decoration-color: $color-brand-light;
   }
