--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -23,16 +23,12 @@
     justify-content: center;
     align-items: center;
     background: white;
-
-    .at-button__text {
-      color: $color-brand-light;
-    }
   }
   .ft {
     position: absolute;
     bottom: 100rpx;
     font-weight: 100;
-    font-size: .6rem;
+    font-size: 1rem;
     text-align: center;
     width: 100%;
     text {
@@ -41,9 +37,9 @@
 
     .link {
       font-weight: 400;
-      font-size: .6rem;
+      font-size: 1rem;
       text-decoration: underline;
-      margin-left: 1 rem;
+      margin-left: 1rem;
       text-decoration-color: $color-brand-light;
     }
   }
