--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,8 @@
 @import "~taro-ui/dist/style/mixins/index.scss";
 @import "~taro-ui/dist/style/components/index.scss";
 
+@import "./pages/components/LessonSection/DebugPage/RunCode/index.scss";
+
 // @import "./taro-ui.css";
 
 .page {
