--- a/src/pages/components/LessonSection/DebugPage/SectionPaging/index.scss
+++ b/src/pages/components/LessonSection/DebugPage/SectionPaging/index.scss
@@ -16,6 +16,7 @@
 
   .pagination {
     width: 100%;
+    max-height: 150rpx;
     background: $color-border-light;
     display: flex;
     overflow-x: scroll;
