--- a/src/pages/components/LessonSection/DebugPage/index.scss
+++ b/src/pages/components/LessonSection/DebugPage/index.scss
@@ -5,7 +5,7 @@
     width: 100%;
     display: block;
     position: fixed;
-    top: 50px;
+    top: 150px;
     right: 0;
     left: 0;
     z-index: 12;
@@ -23,8 +23,10 @@
       margin-right: 25rpx;
       font-size: 1rem;
       font-weight: 200;
-      height: 2rem;
-      width: 100rpx;
+      height: 32px;
+      // width: 100rpx;
+      margin-top: 50px;
+      border-radius: 50%;
       border: 1px solid $color-brand-light;
       background: white;
       color: $color-brand-light;
